--- a/www/includes/distribusi/penjualan-retail/penjualan-retail.html
+++ b/www/includes/distribusi/penjualan-retail/penjualan-retail.html
@@ -46,11 +46,11 @@
 
 
 <div class="breadcrumb-pusatriyal">
-  <span class="active">Kegiatan Distribusi</span>
+  <span class="active">Distribusi Retail</span>
 </div>
 <div class="list-group list-group-flush">
-  <a href="#" pusatriyal-role='routing' pusatriyal-target='includes/distribusi/menu-distribusi-retail.html' class="list-group-item list-group-item-action listx">Distribusi Retail</a>
-  <a href="#" class="list-group-item list-group-item-action listx" pusatriyal-role='routing' pusatriyal-target='includes/distribusi/menu-distribusi-corporate.html'>Distribusi Corporate</a>
+  <a style="cursor:pointer;" pusatriyal-role="routing" pusatriyal-target="/includes/distribusi/penjualan-retail/transaksi-penjualan.html" class="list-group-item list-group-item-action listx">Transaksi Penjualan</a>
+  <a style="cursor:pointer;" pusatriyal-role="routing" pusatriyal-target="/includes/distribusi/penjualan-retail/transaksi-pemesanan.html" class="list-group-item list-group-item-action listx">Transaksi Pemesanan</a>  
 </div>
 
 </div>
