--- a/www/includes/distribusi/menu-distribusi-retail.html
+++ b/www/includes/distribusi/menu-distribusi-retail.html
@@ -49,6 +49,7 @@
   <span class="active">Distribusi Retail</span>
 </div>
 <div class="list-group list-group-flush">
+  <a style="cursor:pointer;" pusatriyal-role="routing" pusatriyal-target="/includes/distribusi/penjualan-retail/penjualan-retail.html" class="list-group-item list-group-item-action listx">Penjualan Retail</a>
   <a href="#" class="list-group-item list-group-item-action listx">Pencatatan Petugas</a>
   <a pusatriyal-role="routing" pusatriyal-target="/includes/distribusi/gpsretail.html" class="list-group-item list-group-item-action listx">GPS Tracking</a>
 </div>
