--- a/www/includes/stock/opname_stock/form-opname.html
+++ b/www/includes/stock/opname_stock/form-opname.html
@@ -1,5 +1,8 @@
 <div class="subcontent" style="">
 <style>
+    .table-accordion{
+      font-size: 9pt;
+    }
     body {
       margin: 0;
       padding: 0;
@@ -95,6 +98,10 @@
     .iziToast-buttons{
       width: 100%;
     }
+    .rounded-btn{
+      bottom: 0;
+      right: 0;
+    }
 </style>
 
 <div class="pusatriyal-submit btn-group">
@@ -111,35 +118,28 @@
 <!-- <input type="hidden" name="sm_id" id="sm_id"> -->
     <div class="form-group">
         <label for="id" class="label-for">Kode Opname</label>
-        <input type="text" readonly="" name="id" id="kode_opname" class="form-control text-right">
+        <input type="text" readonly="" name="id" id="kode_opname" class="form-control">
     </div>
     <div class="form-group">
         <label class="label-for" for="tgl_opname" >Tanggal Opname</label><br>
         <div class="border-bottom border-bottom-1">
-          <input type="text" name="tgl_opname" id="tgl_opname" class="form-control-plaintext" >
+          <input type="text" name="tgl_opname" id="tgl" class="form-control-plaintext" >
         </div>
     </div>
     <div class="form-group">
         <label for="pilih_gudang" class="label-for">Posisi Item</label><br>
         <div class="border-bottom border-bottom-1">
           <select class="form-control-plaintext" id="pilih_gudang" name="pilih_gudang" tabindex="-1" title="">
-            <option value="">---Pilih Gudang---</option>
-            <option value="14">GOOD IN TRANSIT</option>
-            <option value="15">GUDANG RIYAL</option>
-            <option value="17">PETUGAS PENGIRIMAN</option>
-            <option value="18">SUPPLIER</option>
-            <option value="19">PROSES GOOD IN TRANSIT</option>
-            <option value="20">Pecahan Pada Pusat</option>
-            <option value="21">Pecahan Pada Petugas</option>
-            <option value="22">Pecahan Pada Outlet</option>
-            <option value="23">Pecahan Dalam Pengiriman</option>
-            <option value="24">Pecahan Dalam Titip Dana</option>
+            
           </select>
+
+          <input type="hidden" id="gudang" name="gudang">
+
         </div>
     </div>
     <div class="form-group">
-        <label for="alamat" class="label-for">Staff</label>
-        <input type="text" readonly="" name="alamat" id="alamat" class="form-control" >
+        <label for="staff" class="label-for">Staff</label>
+        <input type="text" readonly="" name="staff" id="staff" class="form-control" >
 
     </div>
 
@@ -148,28 +148,30 @@
       <div class="form-group">
         <label>Item</label>
         <div class="border-bottom border-bottom-1">
-          <select class="form-control-plaintext">
+          <select class="form-control-plaintext" id="item">
             
           </select>
+
+          <input type="hidden" id="opname_detail">
+          <input type="hidden" id="name_satuan">
+          <input type="hidden" id="nama_item">
         </div>
       </div>
       
       <div class="form-group">
         <label>Qty Sistem</label>
-        <div class="border-bottom border-bottom-1">
-          <div class="input-group">
-            <input type="number" readonly="" class="form-control-plaintext" name="">
-            <div class="input-group-append">
-              <span class="input-group-text">Lembar</span>
-            </div>
+        <div class="input-group">
+          <input type="number" readonly="" class="form-control" name="" id="qty_sistem">
+          <div class="input-group-append">
+            <span class="input-group-text">Lembar</span>
           </div>
         </div>
       </div>
       <div class="form-group">
-        <label>Item</label>
+        <label>Qty Real</label>
         <div class="border-bottom border-bottom-1">
           <div class="input-group">
-            <input type="number" class="form-control-plaintext" name="">
+            <input type="number" class="form-control-plaintext" name="" id="qty_real">
             <div class="input-group-append">
               <span class="input-group-text">Lembar</span>
             </div>
@@ -180,56 +182,11 @@
         <button class="btn btn-primary btn-block" type="button" id="btn-append">Tambah ke list</button>
       </div>
     </fieldset>
-
-    <div class="card">
-      <div class="card-body card-forlist">
-
-        <button class="btn btn-danger btn-card-forlist-remove" type="button">
-          <i class="fa fa-times-circle"></i>
-        </button>
-
-        <table class="table">
-          <tbody>
-            <tr>
-              <th colspan="2">Kode - Nama Item</th>
-              
-            </tr>
-            <tr>
-              <td colspan="2">OR/XXXXXX/XX</td>
-            </tr>
-            <tr>
-              <th>Satuan</th>
-              <td>RIYAL</td>
-            </tr>
-            <tr>
-              <th>Qty Sistem</th>
-              <td>1</td>
-            </tr>
-          </tbody>
-        </table>
-
-        <div class="">
-          <label>Qty Real</label>
-          <div class="border-bottom border-bottom-1">
-            <input type="text" class="form-control-plaintext" name="">
-          </div>
-        </div>
-
-        <div class="">
-          <label>Opname</label>
-          <select class="select2 form-control" id="opname_dt" name="opname_dt[]">
-            <option selected="" value="N">-</option>
-            <option value="H">Hilang</option>
-            <option value="R">Rusak</option>
-          </select>
-        </div>
-
-      </div>
+    <div id="form-list-item">
     </div>
-    
 </form>
 
-    <script type="text/javascript" src="includes/manasik/penjualan_manasik/tab_serahterima/js/preview-serahterima-commander.js"></script>
+    <script type="text/javascript" src="includes/stock/opname_stock/js/form-opname-commander.js"></script>
   <script type="text/javascript">
     // display_pembayaran_json(global_pembayaran_json);
   </script>
