--- a/www/includes/distribusi/penjualan-retail/preview-penjualan.html
+++ b/www/includes/distribusi/penjualan-retail/preview-penjualan.html
@@ -224,7 +224,7 @@
                       '</span>'+
                       '<br>'+
                       '<span>'+
-                        '<small class="font-weight-bold">Qty</small> <small id="qty">'+valueqty+'</small>'+
+                        '<small class="font-weight-bold">Value Qty</small> <small id="valueqty">'+valueqty+'</small>'+
                       '</span>'+
                       '<br>'+
                       '<span>'+
