pelaksanaan manasik tinggal edit

--- a/www/includes/manasik/pelaksanaan_manasik/edit-pelaksanaan.html
+++ b/www/includes/manasik/pelaksanaan_manasik/edit-pelaksanaan.html
@@ -110,20 +110,12 @@
   </button>
 </div>
 <div class="breadcrumb-pusatriyal">
-  <span class="active">Form Pelaksanaan Kegiatan </span>
+  <span class="active">Edit Pelaksanaan Kegiatan </span>
 </div>
 
 <form id="pelaksanaan-form" class="form" action="" method="post" autocomplete="off" style="margin-bottom: 25mm">
     <input type="hidden" name="_token" id="_token">
-
-    <div class="form-group">
-        <label for="customer" class="label-for">Kode Pelaksanaan</label><br>
-        <div class="border-bottom border-bottom-1">
-          <select id="idplan" name="idplan" class="form-control-plaintext">
-            
-          </select>
-        </div>
-    </div>
+    <input type="hidden" name="id" id="id">
 
     <div class="form-group">
       <label class="label-for" >Petugas Kegiatan</label><br>
@@ -216,7 +208,7 @@
     
 </form>
 
-    <script type="text/javascript" src="includes/manasik/pelaksanaan_manasik/js/form-pelaksanaan-commander.js"></script>
+    <script type="text/javascript" src="includes/manasik/pelaksanaan_manasik/js/edit-pelaksanaan-commander.js"></script>
   <script type="text/javascript">
     // display_pembayaran_json(global_pembayaran_json);
   </script>
