edit pelaksanaan otw

--- a/www/includes/manasik/pelaksanaan_manasik/tab_pelaksanaan_manasik/preview-tab-pelaksanaan.html
+++ b/www/includes/manasik/pelaksanaan_manasik/tab_pelaksanaan_manasik/preview-tab-pelaksanaan.html
@@ -279,6 +279,6 @@
 
     <script type="text/javascript" src="includes/manasik/pelaksanaan_manasik/tab_pelaksanaan_manasik/js/preview-tab-pelaksanaan-commander.js"></script>
   <script type="text/javascript">
-    // display_pembayaran_json(global_pembayaran_json);
+    preview_pelaksanaan_json(json_pelaksanaan);
   </script>
 </div>
