Update by didin

--- a/www/includes/distribusi/penjualan-retail/preview-penjualan.html
+++ b/www/includes/distribusi/penjualan-retail/preview-penjualan.html
@@ -224,7 +224,7 @@
                       '</span>'+
                       '<br>'+
                       '<span>'+
-                        '<small class="font-weight-bold">Value Qty</small> <small id="valueqty">'+valueqty+'</small>'+
+                        '<small class="font-weight-bold">Qty</small> <small id="qty">'+valueqty+'</small>'+
                       '</span>'+
                       '<br>'+
                       '<span>'+
@@ -271,7 +271,7 @@
                     title:'Sukses!',
                     message:'Data berhasil dihapus!'
                   });
-                Routing.load_page('includes/distribusi/penjualan-retail/transaksi-penjualan.html');
+                Routing.load_page('includes/distribusi/penjualan-retail/penjualan-corporate.html');
                 } else if(res.status === 'gagal'){
                   iziToast.error({
                     title:'Gagal!',
