--- a/www/includes/distribusi/penjualan-retail/preview-pemesanan.html
+++ b/www/includes/distribusi/penjualan-retail/preview-pemesanan.html
@@ -193,7 +193,7 @@
     </div>
     <div class="form-group">
         <label for="netto" class="label-for">Bukti transfer</label><br>
-        <div class="border-bottom border-bottom-1">
+        <div class="border-bottom border-bottom-1">          
           <img src="" id="buktitransfer" class="img-responsive" style="max-width: 120mm">
         </div>
     </div>
@@ -244,172 +244,116 @@
           $('#buktitransfer').attr('src', url('storage') + '/' + response.penjualan.sr_bukti_transfer);
         }
 
-        for (var i = 0; i < response.penjualan_dt.length; i++) {
-
-          valueqty = parseFloat(response.penjualan_dt[i].srdt_qty) * parseFloat(response.penjualan_dt[i].ir_nilaitoreal);
-
-          html += '<div class="accordion">'+
-            '<div class="card">'+
-              '<div class="card-header bg-success header-collapse p-0" id="headingOne">'+
-                '<h5 class="mb-0">'+
-                  '<button class="btn btn-link btn-block btn-header text-white" type="button" data-toggle="collapse" data-target="#collapse'+i+'" aria-expanded="true" aria-controls="collapseOne">'+
-                    response.penjualan_dt[i].ir_name+
-                  '</button>'+
-                '</h5>'+
-              '</div>'+
-              ''+
-              '<div id="collapse'+i+'" class="collapse datalist-collapse" aria-labelledby="headingOne" data-parent="#list-item">'+
-                '<div class="card">'+
-                  '<div class="card-body card-forlist p-3">'+
-                    ''+
-                    '<span>'+
-                      '<small class="font-weight-bold">Stock</small> <small id="stock">'+response.penjualan_dt[i].sr_qty+'</small>'+
-                    '</span>'+
-                    '<br>'+
-                    '<span>'+
-                      '<small class="font-weight-bold">Qty</small> <small id="qty">'+response.penjualan_dt[i].srdt_qty+'</small>'+
-                    '</span>'+
-                    '<br>'+
-                    '<span>'+
-                      '<small class="font-weight-bold">Value Qty</small> <small id="valueqty">'+response.penjualan_dt[i].srdt_valueqty+'</small>'+
-                    '</span>'+
-                    '<br>'+
-                    '<span>'+
-                      '<small class="font-weight-bold">Price</small> <small id="price">'+get_currency(response.penjualan_dt[i].srdt_price)+'</small>'+
-                    '</span>'+
-                  '</div>'+
-                  '<div class="card-footer">'+
-                    '<span>'+
-                      '<span class="font-weight-bold">Total</span> <span id="status">'+get_currency(response.penjualan_dt[i].srdt_total)+'</span>'+
-                    '</span>'+
-                  '</div>'+
-                  ''+
-                '</div>'+
-              '</div>'+
-            '</div>'+
-          '</div>';
-        }
-        $('#list-item').html(html);
+        // for (var i = 0; i < response.penjualan_dt.length; i++) {
+        //
+        //   valueqty = parseFloat(response.penjualan_dt[i].srdt_qty) * parseFloat(response.penjualan_dt[i].ir_nilaitoreal);
+        //
+        //   html += '<div class="accordion">'+
+        //     '<div class="card">'+
+        //       '<div class="card-header bg-success header-collapse p-0" id="headingOne">'+
+        //         '<h5 class="mb-0">'+
+        //           '<button class="btn btn-link btn-block btn-header text-white" type="button" data-toggle="collapse" data-target="#collapse'+i+'" aria-expanded="true" aria-controls="collapseOne">'+
+        //             response.penjualan_dt[i].ir_name+
+        //           '</button>'+
+        //         '</h5>'+
+        //       '</div>'+
+        //       ''+
+        //       '<div id="collapse'+i+'" class="collapse datalist-collapse" aria-labelledby="headingOne" data-parent="#list-item">'+
+        //         '<div class="card">'+
+        //           '<div class="card-body card-forlist p-3">'+
+        //             ''+
+        //             '<span>'+
+        //               '<small class="font-weight-bold">Stock</small> <small id="stock">'+response.penjualan_dt[i].sr_qty+'</small>'+
+        //             '</span>'+
+        //             '<br>'+
+        //             '<span>'+
+        //               '<small class="font-weight-bold">Qty</small> <small id="qty">'+response.penjualan_dt[i].srdt_qty+'</small>'+
+        //             '</span>'+
+        //             '<br>'+
+        //             '<span>'+
+        //               '<small class="font-weight-bold">Qty</small> <small id="qty">'+valueqty+'</small>'+
+        //             '</span>'+
+        //             '<br>'+
+        //             '<span>'+
+        //               '<small class="font-weight-bold">Price</small> <small id="price">'+get_currency(response.penjualan_dt[i].srdt_price)+'</small>'+
+        //             '</span>'+
+        //           '</div>'+
+        //           '<div class="card-footer">'+
+        //             '<span>'+
+        //               '<span class="font-weight-bold">Total</span> <span id="status">'+get_currency(response.penjualan_dt[i].srdt_total)+'</span>'+
+        //             '</span>'+
+        //           '</div>'+
+        //           ''+
+        //         '</div>'+
+        //       '</div>'+
+        //     '</div>'+
+        //   '</div>';
+        // }
+        // $('#list-item').html(html);
       }
     });
   });
 
-  function setujui() {
-		iziToast.show({
-			theme: 'dark',
-			icon: 'icon-person',
-			message: 'Apakah Anda yakin untuk meng-approve data ini ?',
-			progressBarColor: 'rgb(0, 255, 184)',
-			buttons: [
-			['<button>IYA </button>', function (instance, toast) {
-        var idtransaksi = $('#sr_id').val();
-        console.log(idtransaksi);
-				$.ajax({
-					data : {idtransaksi},
-					type : "get",
-					url : url('api/riyal/distribusi/retail/penjualan/selesai'),
-					dataType : 'json',
-					success : function (response){
-						iziToast.destroy();
-						if(response.status == 'sukses'){
-							iziToast.info({
-								message: 'Data Berhasil disimpan!',
-								position : 'topRight'
-							});
-							$('#setujui').attr('disabled' , true);
-							$('#tolak').attr('disabled' , true);
-              Routing.load_page('includes/distribusi/penjualan-retail/transaksi-pemesanan.html');
-						}
-						else {
-							iziToast.error({
-								message: 'Terjadi kesalahan!',
-								position : 'topRight'
-							});
+  function hapus(){
+    iziToast.question({
+      timeout:false,
+        close: false,
+        overlayClose:true,
+        overlay: true,
+        displayMode: 'once',
+        id: 'question',
+        zindex: 999,
+        title: 'Konfirmasi!',
+        message: 'Apa anda yakin mau menghapus data ini?',
+        position: 'center',
+        buttons: [
+            ['<button><b>YES</b></button>', function (instance, toast) {
+          $.ajax({
+            url:url('api/riyal/distribusi/corporate/agen/hapus'),
+            data:{data_td:$('#sr_id').val()},
+            type:'get',
+            success:function(res){
+              if (res.status === "berhasil") {
+                iziToast.success({
+                  title:'Sukses!',
+                  message:'Data berhasil dihapus!'
+                });
+              Routing.load_page('includes/distribusi/penjualan-retail/penjualan-corporate.html');
+              } else if(res.status === 'gagal'){
+                iziToast.error({
+                  title:'Gagal!',
+                  message:'Data gagal dihapus!'
+                });
+              }
+            },
+            error: function(jqXHR, exception) {
+              if (jqXHR.status === 0) {
+                  alert('Not connect.\n Verify Network.');
+              } else if (jqXHR.status == 404) {
+                  alert('Requested page not found. [404]');
+              } else if (jqXHR.status == 500) {
+                  alert('Internal Server Error [500].');
+              } else if (exception === 'parsererror') {
+                  alert('Requested JSON parse failed.');
+              } else if (exception === 'timeout') {
+                  alert('Time out error.');
+              } else if (exception === 'abort') {
+                  alert('Ajax request aborted.');
+              } else {
+                  alert('Uncaught Error.\n' + jqXHR.responseText);
+              }
+            }
+          });
+                instance.hide({ transitionOut: 'fadeOut' }, toast, 'button');
 
-						}
-					},
-					error : function(){
-						iziToast.warning({
-							title: 'ERROR',
-							message: 'ERROR hubungi Developer',
-						});
-					}
-				})
-			}, true], // true to focus
-			['<button> TIDAK </button>', function (instance, toast) {
-				instance.hide({
-					transitionOut: 'fadeOutUp',
-					onClosing: function(instance, toast, closedBy){
-						console.info('closedBy: ' + closedBy); // The return will be: 'closedBy: buttonName'
-					}
-					}, toast, 'buttonName');
-					}]
-					],
-					onOpening: function(instance, toast){
-						console.info('callback abriu!');
-					},
-					onClosing: function(instance, toast, closedBy){
-					console.info('closedBy: ' + closedBy); // tells if it was closed by 'drag' or 'button'
-					}
-		});
-	}
+            }, true],
+            ['<button>NO</button>', function (instance, toast) {
 
-	function tolak() {
-		iziToast.show({
-			theme: 'dark',
-			icon: 'icon-person',
-			message: 'Apakah Anda yakin untuk meng-approve data ini ?',
-			progressBarColor: 'rgb(0, 255, 184)',
-			buttons: [
-			['<button>IYA </button>', function (instance, toast) {
-				$.ajax({
-					data : {idtransaksi:$('#sr_id').val()},
-					type : "get",
-					url : url('api/riyal/distribusi/retail/penjualan/ditolak'),
-					dataType : 'json',
-					success : function (response){
-						iziToast.destroy();
-						if(response.status == 'sukses'){
-							iziToast.info({
-								message: 'Data Berhasil disimpan!',
-								position : 'topRight'
-							});
-							$('#setujui').attr('disabled' , true);
-							$('#tolak').attr('disabled' , true);
-              Routing.load_page('includes/distribusi/penjualan-retail/transaksi-pemesanan.html');
-						}
-						else {
-							iziToast.error({
-								message: 'Terjadi kesalahan!',
-								position : 'topRight'
-							});
+                instance.hide({ transitionOut: 'fadeOut' }, toast, 'button');
 
-						}
-					},
-					error : function(){
-						iziToast.warning({
-							title: 'ERROR',
-							message: 'ERROR hubungi Developer',
-						});
-					}
-				})
-			}, true], // true to focus
-			['<button> TIDAK </button>', function (instance, toast) {
-				instance.hide({
-					transitionOut: 'fadeOutUp',
-					onClosing: function(instance, toast, closedBy){
-						console.info('closedBy: ' + closedBy); // The return will be: 'closedBy: buttonName'
-					}
-					}, toast, 'buttonName');
-					}]
-					],
-					onOpening: function(instance, toast){
-						console.info('callback abriu!');
-					},
-					onClosing: function(instance, toast, closedBy){
-					console.info('closedBy: ' + closedBy); // tells if it was closed by 'drag' or 'button'
-					}
-		});
-	}
+            }],
+        ]
+    });
+  }
   </script>
 </div>
